# sietch

./: README.md  meson.build
app/: meson.build
app/resources/: meson.build  sietch.gresource.xml
app/resources/scss/: _bar.scss  _battery.scss  _clock.scss  _hyprland.scss  _network.scss  _variables.scss  main.scss  meson.build
app/resources/ui/: access-point-box.blp  bar.blp  battery.blp  bluetooth.blp  clock.blp  device-box.blp  hyprland.blp  meson.build  network.blp  theme.blp  wireplumber.blp
app/src/: application.vala  bar.vala  battery.vala  bluetooth.vala  clock.vala  hyprland.vala  main.vala  meson.build  network.vala  theme.vala  wireplumber.vala
app/src/lib/: access-point-box.vala  brightness.vala  circular-progress.vala  device-box.vala  meson.build  workspace-button.vala
